--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>CyberX</title>
 </head>
 <body>
-    <img src="download.jpg" all="CyberX"
+    <img src="cyberX.jpg" all="CyberX"
     <h1>Seja Bem Vindo ao projeto CyberX</h1>
 </body>
 </html>
