--- a/index.html
+++ b/index.html
@@ -1,12 +1,84 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CyberX</title>
+    <title>Bolo de Cenoura</title>
+    <style>
+        body {
+            font-family: Arial;
+            background-color: #fff8f0;
+            color: #333;
+            padding: 20px;
+            margin: 0;
+        }
+        .container {
+            text-align: center;
+            max-width: 800px;
+            margin: auto;
+        }
+        img {
+            width: 500px;
+            margin: 20px 0;
+        }
+        footer {
+            margin-top: 30px;
+            font-size: 14px;
+        }
+    </style>
 </head>
 <body>
-    <img src="cyberX.jpg" all="CyberX"
-    <h1>Seja Bem Vindo ao projeto CyberX</h1>
+    <div class="container">
+
+        <h1 style="color: #d2691e;">Receita de Bolo de Cenoura 🥕</h1>
+        <h4>Grupo Cyber X, 1º F</h4>
+        <h4>Professor Bruno Zolatareff - APW</h4>
+
+        <!-- Primeira imagem -->
+        <img src="https://recipesblob.oetker.com.br/assets/11ed1b54a18b427ea8e7f7d141f0a34d/1272x764/bolo_cenoura_horizontal.webp" 
+             alt="Bolo de Cenoura da Dr. Oetker">
+
+        <h2>Ingredientes</h2>
+        <ul style="text-align: left; display: inline-block;">
+            <li>3 cenouras médias picadas</li>
+            <li>3 ovos</li>
+            <li>1 xícara de óleo</li>
+            <li>2 xícaras de açúcar</li>
+            <li>2 e 1/2 xícaras de farinha de trigo</li>
+            <li>1 colher de sopa de fermento em pó</li>
+        </ul>
+
+        <h2>Modo de Preparo</h2>
+        <ol style="text-align: left; display: inline-block;">
+            <li>No liquidificador, bata as cenouras, os ovos e o óleo até virar um creme.</li>
+            <li>Despeje a mistura em uma tigela e adicione o açúcar, a farinha e o fermento.</li>
+            <li>Misture bem até ficar homogêneo.</li>
+            <li>Despeje a massa em uma forma untada e enfarinhada.</li>
+            <li>Asse em forno pré-aquecido a 180°C por cerca de 40 minutos.</li>
+        </ol>
+
+        <h2>Cobertura de Chocolate (opcional)</h2>
+        <ul style="text-align: left; display: inline-block;">
+            <li>4 colheres de sopa de açúcar</li>
+            <li>2 colheres de sopa de chocolate em pó</li>
+            <li>2 colheres de sopa de manteiga</li>
+            <li>2 colheres de sopa de leite</li>
+        </ul>
+        <p>Leve tudo ao fogo até ferver, depois jogue sobre o bolo ainda quente.</p>
+
+        <!-- Segunda imagem (repetida) -->
+        <img src="https://recipesblob.oetker.com.br/assets/11ed1b54a18b427ea8e7f7d141f0a34d/1272x764/bolo_cenoura_horizontal.webp" 
+             alt="Bolo de Cenoura da Dr. Oetker (repetida)">
+
+        <footer>
+            <p><strong>Membros do grupo:</strong><br>
+                Davi Luís,<br>
+                Guilherme de Moraes,<br>
+                Flavio Gustavo,<br>
+                Gustavo Vieira,<br>
+                Cauê Ishiki
+            </p>
+        </footer>
+
+    </div>
 </body>
 </html>
