--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
                 Gustavo Vieira,<br>
                 Cauê Ishiki
             </p>
+            <p><strong>Site desenvolvido por Davi Luís</strong></p>
         </footer>
 
     </div>
